fix: CompanyGoals component alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,7 @@
 }
 
 @theme{
-  --color-lgreen : #2EC9A2;
+  --color-lgreen : #2ec9a2;
 }
 
 
